[SNDF-2] Code refactor