@@ -4,13 +4,16 @@ import com.tarasiuk.soundify.exception.InvalidRequestException;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class ControllerHelper {
 
     private static final int CSV_IDS_MAX_LENGTH = 199;
     private static final String CSV_IDS_PARAM_REGEXP = "^(?:\\d+,){0," + CSV_IDS_MAX_LENGTH + "}\\d+$";
     private static final String CSV_DELIMITER = ",";
+
+    private ControllerHelper() {
+    }
+
     public static List<Integer> validateAndParseIdsRequestParam(String ids) {
         if (!ids.matches(CSV_IDS_PARAM_REGEXP)) {
             throw new InvalidRequestException("Invalid request param 'ids'");
@@ -18,6 +21,6 @@ public class ControllerHelper {
 
         return Arrays.stream(ids.split(CSV_DELIMITER))
                 .map(Integer::valueOf)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
